add phoebe bulk endpoint
